maze.lessons.maze.island.IslandMaze.scala.error
Escaper:5: error: not found: value GetY
  while (!(GetY==0))
           ^Escaper:9: error: Unit does not take parameters
  suivre_mur()
            ^